# baby_sweep

./: .gitignore  ADDRESS_CLEANER_README.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-SUMMARY.md  PACKAGE-README.md  README.md  TROUBLESHOOTING.md  VISUAL-PREVIEW.md  admin-panel.jsx  pyproject.toml  requirements.txt
address_cleaner/: __init__.py  __main__.py  cli.py  core.py  gnaf.py  ml_model.py  parsing.py  schemas.py  scoring.py
address_cleaner/config/: default_config.yaml
baby-sweep/: .gitignore  Dockerfile  ENV_CONFIGURATION.md  PHASE2.md  QUICKSTART.md  baby-sweep.service  docker-compose.yml  nginx.conf
baby-sweep/backend/: .env.example  database.js  package-lock.json  package.json  server.js
baby-sweep/frontend/: .env.example  package-lock.json  package.json
baby-sweep/frontend/public/: index.html
baby-sweep/frontend/src/: App.js  CalendarView.js  index.css
examples/: example_advanced.py  example_basic.py  example_train_ml.py  sample_addresses.csv  sample_training_data.csv
